--- a/web/tmpl/widgets/AddAnnotation.tmpl
+++ b/web/tmpl/widgets/AddAnnotation.tmpl
@@ -1,7 +1,8 @@
 <SCRIPT language="JavaScript">
 // Begin Widget API -----------------------------------------------------------
 // callbacks:
-//    add_annotation()
+//		add_annotation()
+//		update_annotation()
 // End Widget API -------------------------------------------------------------
 
 function wait_to_search (search_func) {
@@ -46,6 +47,21 @@ function get_annotation_type_groups () {
 	});
 }
 
+function verify_image_file(file) {
+	ext = file.name.split('.').pop();
+	if (ext != 'jpg' && ext != 'gif' && ext != 'png') {
+		alert('Error: specified file is not an image');
+		return 0;
+	}
+	
+	if (file.size > 1*1024*1024) {
+		alert('Error: image file is too large (>1MB)');
+		return 0;
+	}
+	
+	return 1;
+}
+
 $(function() {
 	$("#edit_annotation_type").autocomplete({source:[]});
 	$("#edit_annotation_type_group").autocomplete({source: function() { get_annotation_type_groups(); }});
@@ -76,5 +92,6 @@ $(function() {
   </td>
  </tr>
 </table>
-<span onClick="add_annotation();" class='ui-button ui-corner-all ui-button-go'>Add</span>
+<span id='add_annotation_button' onClick="add_annotation();" class='ui-button ui-corner-all ui-button-go'>Add</span>
+<span id='update_annotation_button' onClick="update_annotation();" style='display:none;' class='ui-button ui-corner-all ui-button-go'>Update</span>
 <img id="wait_annotation" src="picts/ajax-loader.gif" style="opacity: 0;" />
